Refactor UI and backend components for improved functionality and logging
- Updated button IDs in the UI for better accessibility and event handling.
- Enhanced the dashboard initialization with debug logging for better traceability.
- Implemented error handling and logging in the backend API for query processing.
- Added advanced agent stack support in dependencies, allowing for dynamic agent selection based on configuration.
- Introduced a root endpoint in the UI for a simple web interface with status information.
- Updated test requirements to include new dependencies for enhanced testing capabilities.

--- a/ui/requirements.txt
+++ b/ui/requirements.txt
@@ -4,6 +4,8 @@ python-multipart
 requests
 pydantic
 httpx
+agno
+ag-ui-protocol
 # AGUIApp and related dependencies
 # Note: Replace with actual agno package when available
 # agno
