Enhance web content handling and analysis features in backend and UI
- Updated the dashboard UI to include options for adding and analyzing web content from URLs.
- Implemented a new backend API for extracting and processing web content, including title, description, and main content.
- Added functionality to analyze web content immediately after adding it to the knowledge base.
- Improved error handling and logging for URL processing in the backend.
- Updated dependencies to include new libraries for web scraping and content extraction.

--- a/ui/requirements.txt
+++ b/ui/requirements.txt
@@ -6,6 +6,7 @@ pydantic
 httpx
 agno
 ag-ui-protocol
+tantivy
 # AGUIApp and related dependencies
 # Note: Replace with actual agno package when available
 # agno
