Implement document upload and analysis features with enhanced error handling
- Added a new UI for document upload, supporting PDF, DOCX, TXT, and MD formats with drag-and-drop functionality.
- Implemented backend processing for document uploads, extracting text and calculating metadata (word count, character count, line count).
- Introduced a streaming response feature for query processing, allowing real-time updates during analysis.
- Enhanced error handling for unsupported file types and oversized files, providing user-friendly feedback.
- Updated API endpoints for document upload and analysis, including support for multiple file uploads.
- Improved logging for document processing and query handling to facilitate debugging and monitoring.
- Updated dependencies to include new libraries for document processing.

--- a/ui/requirements.txt
+++ b/ui/requirements.txt
@@ -7,6 +7,8 @@ httpx
 agno
 ag-ui-protocol
 tantivy
+PyPDF2 
+pypdf
 # AGUIApp and related dependencies
 # Note: Replace with actual agno package when available
 # agno
