Implement intelligent memory system and enhance session management features
- Introduced a new memory system for personalized, context-aware conversations, allowing agents to remember user preferences and conversation history.
- Updated configuration to enable/disable memory system and set memory database path.
- Enhanced API endpoints for managing session memories, including adding, deleting, and searching memories.
- Improved query processing to utilize relevant memories for context, enhancing response quality.
- Updated README.md to document memory system features and API usage.
- Refactored backend components to support memory integration in agents and session management.

--- a/config.env.example
+++ b/config.env.example
@@ -31,4 +31,21 @@ BACKEND_URL=http://127.0.0.1:8000
 
 # UI Configuration (for docker-compose)
 UI_PORT=8501
-BACKEND_PORT=8000 
+BACKEND_PORT=8000
+
+# Memory System Configuration
+# Enable/disable memory system by default
+ENABLE_MEMORY_SYSTEM=true
+
+# Memory database path (SQLite)
+MEMORY_DB_PATH=tmp/session_memories.db
+
+# Default memory settings for queries
+USE_MEMORY_DEFAULT=true
+MAX_MEMORY_CONTEXT=3
+MAX_HISTORY_MESSAGES=5
+
+# Memory model configuration (uses same provider as main model by default)
+# Set to override with different model for memory processing
+# MEMORY_MODEL_PROVIDER=openai
+# MEMORY_MODEL_NAME=gpt-3.5-turbo 
