--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,39 @@
-fastapi
-uvicorn[standard]
-python-multipart
-openai
-anthropic
-google-generativeai
-lancedb
-python-docx
-pypdf
-beautifulsoup4
-requests
-pydantic
-httpx
-sqlalchemy
-agno
+# Core FastAPI and web framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
 
-# Additional dependencies for enhanced functionality
-aiofiles
-python-jose[cryptography]
-passlib[bcrypt]
+# Document processing
+python-docx>=1.1.0
+PyPDF2>=3.0.1
+pypdf>=3.17.0
+
+# HTTP and web scraping
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+httpx>=0.25.0
+
+# AI and ML core libraries
+openai>=1.3.0
+anthropic>=0.8.0
+google-generativeai>=0.3.0
+
+# Vector database and embeddings
+lancedb>=0.4.0
+
+# Data and schemas
+pydantic>=2.5.0
+python-dotenv>=1.0.0
+sqlalchemy>=2.0.0
+aiosqlite>=0.19.0
+
+# Optional: Agno for memory (install separately if needed)
+# agno>=0.1.0
+
+# Utilities
+rich>=13.7.0
+typer>=0.9.0
+tiktoken>=0.5.0
+
+# File handling
+aiofiles>=23.2.0
