--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -2,33 +2,29 @@ version: '3.8'
 
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ../backend
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend/app:/app/app
-      - ./tmp:/app/tmp
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - ../tmp:/app/tmp
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   ui:
-    build:
-      context: ./ui
-      dockerfile: Dockerfile
+    build: ../ui
     ports:
       - "8501:8501"
-    volumes:
-      - ./ui:/app
     environment:
       - BACKEND_URL=http://backend:8000
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - MODEL_PROVIDER=${MODEL_PROVIDER:-openai}
     depends_on:
-      - backend
-    command: python main.py
+      backend:
+        condition: service_healthy
 
 volumes:
   tmp_data:
