Update CI configuration, refactor PDF handling, and enhance CLI session management
- Added environment variable for OpenAI API key in CI workflow.
- Removed PyPDF2 dependency and streamlined PDF text extraction logic using pypdf.
- Refactored CLI session ID generation to use time module for consistency.
- Introduced async context manager for FastAPI app lifespan to initialize agents and knowledge base on startup.
- Updated test cases to reflect changes in command handling and API endpoint structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,6 @@ jobs:
     - name: Run tests
       run: |
         cd backend
-        python -m pytest ../tests/backend/ -v --maxfail=5 
+        python -m pytest ../tests/backend/ -v --maxfail=5
+      env:
+        OPENAI_API_KEY: "test-key-for-ci" 
