Enhance CI/CD workflows and introduce mock dependencies for testing
- Added environment variables to disable email notifications and verbose output in CI workflows for a cleaner execution.
- Updated README.md and cicd-guide.md to reflect the new quiet execution feature.
- Introduced mock classes for knowledge base and agent to facilitate testing without external dependencies.
- Refactored test cases to utilize mock objects, improving test isolation and reliability.

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,13 +16,17 @@ on:
     tags:
       - 'v*'  # Only on version tags
 
+# Disable email notifications and verbose output
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  ACTIONS_RUNNER_DEBUG: false
+  ACTIONS_STEP_DEBUG: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    continue-on-error: false
     permissions:
       contents: read
       packages: write
@@ -86,6 +90,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    continue-on-error: false
     if: github.event_name == 'workflow_dispatch'
     
     steps:
